--- a/Finn's_Anomaly_Detector.ipynb
+++ b/Finn's_Anomaly_Detector.ipynb
@@ -8,7 +8,8 @@
    "outputs": [],
    "source": [
     "#use this to install tslearn for windows, ignore if already installed\n",
-    "#!python -m pip install tslearn"
+    "#!python -m pip install tslearn\n",
+    "#Note for viewers, I am legally not allowed to share the csv data file for this project"
    ]
   },
   {
